--- a/EE_Web/test-output/old/Suite/methods-not-run.html
+++ b/EE_Web/test-output/old/Suite/methods-not-run.html
@@ -13,8 +13,8 @@
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersAnnualIncomeStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCPercentageStep3</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePlaceOfBirthStep1</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePresentAddressCountryInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateReligionInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePresentAddressCountryInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadFirstName</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersNameStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCRegNumberStep3</td></tr>
@@ -23,6 +23,7 @@
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateLocalGuardianAddr1Step2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateGenderValueInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadMobileNumber</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.enterEmailAddressManually</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCSchoolNameStep3</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateCasteInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateHSCBoardStep3</td></tr>
@@ -32,6 +33,7 @@
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validatePlaceOfIssueInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersMobileStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateBloodGroupInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.enterMobileNumberManually</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDoBStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersQualificationStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateGrdnAddrPincodeStep2</td></tr>
@@ -44,8 +46,8 @@
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateMothersEmailStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersQualificationStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCYoPStep3</td></tr>
-<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersNameStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDomicileInStep1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateFathersNameStep2</td></tr>
 <tr><td>whitefeather.xedge.testcases.GenerateLeadForApplicationForm.validateLeadEmailAddress</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateDateOfIssueInStep1</td></tr>
 <tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.validateSSCBoardStep3</td></tr>
