--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -21,13 +21,13 @@
 <tr><td>User has provided Expiry Date successfully.</td></tr>
 <tr><td>User has entered Religion value successfully.</td></tr>
 <tr><td>User has entered Citizenship value successfully.</td></tr>
-<tr><td>User has failed to provide Caste value.</td></tr>
-<tr><td>User has failed to provide Domicile value.</td></tr>
-<tr><td>User has failed to provide Community value.</td></tr>
+<tr><td>User has entered Caste value successfully.</td></tr>
+<tr><td>User has entered Domicile value successfully.</td></tr>
+<tr><td>User has entered Community value successfully.</td></tr>
 <tr><td>User has entered Present Address value successfully.</td></tr>
 <tr><td>User has entered Country value successfully.</td></tr>
-<tr><td>User has entered State value successfully.</td></tr>
-<tr><td>User has entered City value successfully.</td></tr>
+<tr><td>User has failed to State Gender value.</td></tr>
+<tr><td>User has failed to provide City value.</td></tr>
 <tr><td>User has successfully entered Pincode value in Present Address section.</td></tr>
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Same Address checkbox successfully.</td></tr>
@@ -53,16 +53,16 @@
 <tr><td>User has clicked Next button on Step 2successfully.</td></tr>
 <tr><td>User has entered Course value successfully.</td></tr>
 <tr><td>User has entered SSC School Name value successfully.</td></tr>
-<tr><td>User has failed to provide SSCBoard value.</td></tr>
-<tr><td>User has failed to provide SSC Year of Passing value.</td></tr>
+<tr><td>User has entered SSCBoard value successfully.</td></tr>
+<tr><td>User has entered SSC Year of Passing value successfully.</td></tr>
 <tr><td>User has entered SSC Registration Number value successfully.</td></tr>
-<tr><td>User has failed to provide SSC Mode of Study value.</td></tr>
+<tr><td>User has entered SSC Mode of Study value successfully.</td></tr>
 <tr><td>User has entered SSC Grade/Percentage value successfully.</td></tr>
 <tr><td>User has clicked HSC Results Out Radio button successfully.</td></tr>
 <tr><td>User has entered HSC School Name value successfully.</td></tr>
-<tr><td>User has failed to provide HSCBoard value.</td></tr>
-<tr><td>User has failed to enter HSC Mode Of Study value.</td></tr>
-<tr><td>User has failed to enter HSC Mode Of Study value.</td></tr>
+<tr><td>User has entered HSCBoard value successfully.</td></tr>
+<tr><td>User has entered HSC Mode Of Study value successfully.</td></tr>
+<tr><td>User has entered HSC Year Of Passing value successfully.</td></tr>
 <tr><td>User has entered HSC Percentage/Grade value successfully.</td></tr>
 <tr><td>User has entered HSC Registration Number value successfully.</td></tr>
 <tr><td>User has successfully added HSC examination details.</td></tr>
@@ -73,8 +73,8 @@
 <tr><td>User has entered Degree College Name value successfully.</td></tr>
 <tr><td>User has entered Degree University Name value successfully.</td></tr>
 <tr><td>User has entered Degree/Diploma Exam Type value successfully.</td></tr>
-<tr><td>User has failed to provide Degree/Diploma YoC value.</td></tr>
-<tr><td>User has failed to provide Degree/Diploma Mode Of Study value.</td></tr>
+<tr><td>User has entered Degree/Diploma YoC value successfully.</td></tr>
+<tr><td>User has entered Degree/Diploma Mode Of Study value successfully.</td></tr>
 <tr><td>User has successfully added Graduation Marks year wise details.</td></tr>
 <tr><td>User has provided Attachement1 successfully.</td></tr>
 <tr><td>User has provided Attachement2 successfully.</td></tr>
@@ -95,7 +95,6 @@
 <tr><td>User has clicked Request OTP Button on Login window of Paytm Account successfully.</td></tr>
 <tr><td>User has entered OTP value successfully.</td></tr>
 <tr><td>User has clicked Login Button on Login window of Paytm Account successfully.</td></tr>
-<tr><td>Provided Amount To Be Paid matches the value stored in database.</td></tr>
 <tr><td>User has clicked Pay Now Button on Payment window of Paytm Account successfully.</td></tr>
 <tr><td>Provided Payment Mode matches the value stored in database.</td></tr>
 </table>
