--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -32,12 +32,6 @@
 <tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Same Address checkbox successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
-<tr><td>User has entered Fathers Name value successfully.</td></tr>
-<tr><td>User has entered Fathers Qualification value successfully.</td></tr>
-<tr><td>User has entered Fathers Occupation value successfully.</td></tr>
-<tr><td>User has entered Fathers Annual Income value successfully.</td></tr>
-<tr><td>User has entered Fathers Email value successfully.</td></tr>
-<tr><td>User has entered Fathers Mobile value successfully.</td></tr>
 <tr><td>User has entered Mothers Name value successfully.</td></tr>
 <tr><td>User has entered Mothers Qualification value successfully.</td></tr>
 <tr><td>User has entered Mothers Occupation value successfully.</td></tr>
@@ -95,5 +89,7 @@
 <tr><td>User has clicked Request OTP Button on Login window of Paytm Account successfully.</td></tr>
 <tr><td>User has entered OTP value successfully.</td></tr>
 <tr><td>User has clicked Login Button on Login window of Paytm Account successfully.</td></tr>
+<tr><td>Provided Amount To Be Paid matches the value stored in database.</td></tr>
 <tr><td>User has clicked Pay Now Button on Payment window of Paytm Account successfully.</td></tr>
+<tr><td>Provided Payment Mode matches the value stored in database.</td></tr>
 </table>
