--- a/EE_Web/src/whitefeather/xedge/appconfig/frontend/index.html
+++ b/EE_Web/src/whitefeather/xedge/appconfig/frontend/index.html
@@ -11,7 +11,7 @@
 <script src="select.js"></script>
 <style type="text/css">
 body { 
-		background-image: url("http://localhost/xedge/backgroundImage.jpg");
+		background-image: url("EE_Web/src/whitefeather/xedge/appconfig/frontend/backgroundImage.jpg");
 		padding-top: 30px;
 	    display: table-cell;
 	    vertical-align: middle;
@@ -24,7 +24,7 @@ body {
 <div id="displayPage">
 	<div id="pageContent">
 		<div id="logo">
-		<img alt="img" src="logo.png" style="max-width: 100%; max-height: 100%; display:block; margin:auto;">
+		<img alt="img" src="EE_Web/src/whitefeather/xedge/appconfig/frontend/logo.png" style="max-width: 100%; max-height: 100%; display:block; margin:auto;">
 		</div>
 	
 		<div id="dropDown">
