--- a/EE_Web/src/whitefeather/xedge/appconfig/frontend/index.html
+++ b/EE_Web/src/whitefeather/xedge/appconfig/frontend/index.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.js"></script>
-<link rel="stylesheet" href="semantic.min.css">
-<script src="semantic.min.js"></script>
-<script src="select.js"></script>
+<link rel="stylesheet" href="EE_Web/src/whitefeather/xedge/appconfig/frontend/semantic.min.css">
+<script src="EE_Web/src/whitefeather/xedge/appconfig/frontend/semantic.min.js"></script>
+<script src="EE_Web/src/whitefeather/xedge/appconfig/frontend/select.js"></script>
 <style type="text/css">
 body { 
 		background-image: url("EE_Web/src/whitefeather/xedge/appconfig/frontend/backgroundImage.jpg");
